--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -37,12 +37,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
-    "jest": "^27.5.1",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "jest": "^27.5.1"
   },
   "jest": {
     "moduleNameMapper": {
