--- a/.github/workflows/frontend-release-github.yml
+++ b/.github/workflows/frontend-release-github.yml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          path: todo-app
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
@@ -37,15 +39,17 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+        working-directory: todo-app/todo-frontend
       - name: Build
         run: npm run build
+        working-directory: todo-app/todo-frontend
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
-          path: './todo-frontend/dist'
+          path: './todo-app/todo-frontend/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
