--- a/.github/workflows/frontend-release-github.yml
+++ b/.github/workflows/frontend-release-github.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          path: todo-app
+          path: ./todo-frontend
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
@@ -39,17 +39,17 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
-        working-directory: todo-app/todo-frontend
+        working-directory: ./todo-frontend
       - name: Build
         run: npm run build
-        working-directory: todo-app/todo-frontend
+        working-directory: ./todo-frontend
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
-          path: './todo-app/todo-frontend/dist'
+          path: './todo-frontend/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
