--- a/.github/workflows/frontend-release-github.yml
+++ b/.github/workflows/frontend-release-github.yml
@@ -37,17 +37,20 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+          working-directory: ./todo-frontend
       - name: Install dependencies
         run: npm ci
+        working-directory: ./todo-frontend
       - name: Build
         run: npm run build
+        working-directory: ./todo-frontend
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
-          path: './dist'
+          path: './todo-frontend/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
