--- a/.github/workflows/frontend-release-github.yml
+++ b/.github/workflows/frontend-release-github.yml
@@ -32,6 +32,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: './todo-frontend'
+      - name: Print working directory
+        run: pwd
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
