--- a/.github/workflows/frontend-release-github.yml
+++ b/.github/workflows/frontend-release-github.yml
@@ -30,8 +30,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          path: './todo-frontend'
       - name: Print working directory
         run: pwd
       - name: Set up Node
@@ -39,10 +37,13 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+        working-directory: ./todo-frontend
       - name: Install dependencies
         run: npm ci
+        working-directory: ./todo-frontend
       - name: Build
         run: npm run build
+        working-directory: ./todo-frontend
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
