--- a/.github/workflows/frontend-release-github.yml
+++ b/.github/workflows/frontend-release-github.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+          cache-dependency-path: ./todo-frontend/package-lock.json
       - name: Install dependencies
         run: npm ci
         working-directory: ./todo-frontend
