--- a/.github/workflows/frontend-release-github.yml
+++ b/.github/workflows/frontend-release-github.yml
@@ -43,6 +43,14 @@ jobs:
         working-directory: ./todo-frontend
       - name: Build
         run: npm run build
+        env:
+          VITE_API_KEY: ${{ secrets.VITE_API_KEY }}
+          VITE_APP_AUTH_DOMAIN: ${{ secrets.VITE_APP_AUTH_DOMAIN }}
+          VITE_APP_PROJECT_ID: ${{ secrets.VITE_APP_PROJECT_ID }}
+          VITE_APP_STORAGE_BUCKET: ${{ secrets.VITE_APP_STORAGE_BUCKET }}
+          VITE_APP_MESSAGING_SENDER_ID: ${{ secrets.VITE_APP_MESSAGING_SENDER_ID }}
+          VITE_APP_APP_ID: ${{ secrets.VITE_APP_APP_ID }}
+          VITE_APP_MEASUREMENT_ID: ${{ secrets.VITE_APP_MEASUREMENT_ID }}
         working-directory: ./todo-frontend
       - name: Setup Pages
         uses: actions/configure-pages@v4
