--- a/todo-backend/package.json
+++ b/todo-backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "Preveen Raj",
   "license": "ISC",
@@ -13,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.4",
+    "mongoose": "^8.4.4"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
