--- a/.github/workflows/frontend-release-github.yml
+++ b/.github/workflows/frontend-release-github.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Build
         run: npm run build
         env:
+          VITE_DOMAIN: ${{ secrets.VITE_DOMAIN }}
           VITE_APP_API_KEY: ${{ secrets.VITE_APP_API_KEY }}
           VITE_APP_AUTH_DOMAIN: ${{ secrets.VITE_APP_AUTH_DOMAIN }}
           VITE_APP_PROJECT_ID: ${{ secrets.VITE_APP_PROJECT_ID }}
