--- a/todo-frontend/package.json
+++ b/todo-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "eslint-plugin-react": "^7.35.0",
     "firebase": "^10.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
