--- a/todo-backend/package.json
+++ b/todo-backend/package.json
@@ -18,5 +18,10 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
-  }
+  },
+  "engines": {
+  "node": "20.11",
+  "npm": "9.x",
+  "yarn": "1.22.x"
+}
 }
