--- a/package.json
+++ b/package.json
@@ -4,10 +4,5 @@
     "description": "A simple todo app",
     "main": "index.js",
     "author": "Your Name",
-    "license": "MIT",
-    "engines": {
-        "node": "18.19.1",
-        "npm": "9.x",
-        "yarn": "1.22.x"
-    }
+    "license": "MIT"
 }
